--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,18 @@
 # Don't change this
 theme: jekyll-theme-primer
 
+# AMWA ID
+amwa_id: NMOS
+
 # GitHub project
 baseurl: /nmos
 
 # Which release or branch appears in header links and on the home page
 default_tree: branches/master
+
+# Regex patterns of tags (releases) and branches to show
+show_tags: 
+show_branches: master
 
 # So we can redirect from e.g. /is-04
 plugins:
